# Sentinel

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  docker-compose.yml
.github/workflows/: eval.yml
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: annotation-panel.tsx  empty-state.tsx  error-banner.tsx  nav-bar.tsx  span-waterfall.tsx  sparkline.tsx  theme-toggle.tsx  toast.tsx  trace-actions.tsx
dashboard/lib/: api.ts
docs/: alerts.md  architecture.md  audit.md  evals.md  index.md  phase2-progress.md  phase3-wishlist.md  quickstart.md  routing.md  verifications.md  vs-langsmith.md
docs/launch/: blog_post.md  demo_video_script.md  operator_notes.md
docs/learn/: README.md  celery-task-chaining.md  conventional-commits-and-semver.md  (+13 more)
examples/: eval_suite_example.yaml  hello_anthropic.py  hello_openai.py  playwright_agent.py  routing_policy_example.json  sdk_quickstart.py  seed_demo.py
gateway/: Dockerfile  pyproject.toml
gateway/app/: auth.py  config.py  main.py
gateway/app/alerts/: __init__.py  evaluator.py
gateway/app/audit/: __init__.py  classifiers.py  ledger.py
gateway/app/db/: __init__.py  models.py  seed.py  session.py
gateway/app/db/migrations/: alembic.ini  env.py
gateway/app/db/migrations/versions/: 003_byok.py  004_auth.py
gateway/app/evals/: __init__.py  assertions.py  github_action.py  parser.py  runner.py
gateway/app/providers/: __init__.py  anthropic.py  base.py  openai.py  openrouter.py
gateway/app/routes/: __init__.py  alerts.py  annotations.py  anthropic_compat.py  api_keys.py  audit.py  auth.py  credentials.py  datasets.py  evals.py  openai_compat.py  policies.py  projects.py  traces.py  verifications.py
gateway/app/routing/: __init__.py  middleware.py  schema.py
gateway/app/security/: __init__.py  keyvault.py
gateway/app/tracing/: __init__.py  cost.py  recorder.py  schema.py
gateway/app/verification/: __init__.py  judges.py  schema.py
gateway/app/workers/: __init__.py  celery_app.py  evaluate_trace.py  persist_trace.py
gateway/tests/: __init__.py  test_alerts.py  test_annotations.py  test_anthropic_adapter.py  test_auth.py  test_config.py  test_cost.py  test_credentials.py  test_evals.py  test_get_provider_key.py  test_judges.py  test_keyvault.py  test_openai_adapter.py  test_schemas.py  test_verification_rules.py
scripts/: demo.sh
sdk/: README.md  pyproject.toml
sdk/sentinel/: __init__.py  client.py  management.py  tracing.py
sdk/tests/: test_client.py
(+15 files in other folders)
